# mailplug-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: claude_desktop_config.json
src/mailplug_mcp/: __init__.py  auth.py  cli.py  config.py  imap_client.py  renderer.py  server.py  signature.py  smtp_client.py
src/mailplug_mcp/tools/: attachments.py  receive.py  send.py
tests/: test_renderer.py  test_signature.py
